--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
-appdirs==1.4.3
-colorama==0.3.9
-packaging==16.8
-py==1.4.33
-pyparsing==2.2.0
-pytest==3.0.7
+alembic==0.6.2
+astroid==1.5.2
+backports.functools-lru-cache==1.4
+blinker==1.3
+configparser==3.5.0
+enum34==1.1.6
+Flask==0.10.1
+Flask-Bootstrap==3.0.3.1
+Flask-Login==0.3.1
+Flask-Mail==0.9.0
+Flask-Migrate==1.1.0
+Flask-Moment==0.2.1
+Flask-Script==0.6.6
+Flask-SQLAlchemy==1.0
+Flask-WTF==0.9.4
+isort==4.2.5
+itsdangerous==0.23
+Jinja2==2.7.1
+lazy-object-proxy==1.3.1
+Mako==0.9.1
+MarkupSafe==0.18
+mccabe==0.6.1
+pylint==1.7.1
+singledispatch==3.4.0.3
 six==1.10.0
+SQLAlchemy==0.9.9
+virtualenv==15.0.2
+Werkzeug==0.10.4
+wrapt==1.10.10
+WTForms==1.0.5
