--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
 isort==4.2.5
 itsdangerous==0.23
-Jinja2==2.7.1
+Jinja2>=2.8.1
 lazy-object-proxy==1.3.1
 Mako==0.9.1
 MarkupSafe==0.18
