--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ backports.functools-lru-cache==1.4
 blinker==1.3
 configparser==3.5.0
 enum34==1.1.6
-Flask==0.10.1
+flask>=0.12.3
 Flask-Bootstrap==3.0.3.1
 Flask-Login==0.3.1
 Flask-Mail==0.9.0
